--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <title>Mealify</title>
-    <link rel="icon" href="files/favicon.png">
+    <link rel="icon" href="favicon.png">
     <script src="https://kit.fontawesome.com/ea60552df8.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Inter:wght@400;700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -39,7 +39,7 @@
             </a>  
           </div>
         </div>
-        <img src="files/hero-img.png" alt="">  
+        <img src="hero-img.png" alt="">  
       </div>
     </header>
     <section id="chefs">
@@ -48,7 +48,7 @@
         <p>Our <span>Professional</span> Chefs</p>
         <div>
           <figure>
-            <div><img src="files/chefs-1.jpg" alt="chefs-1"></div>
+            <div><img src="chefs-1.jpg" alt="chefs-1"></div>
             <figcaption>
               <h3>Walter White</h3>
               <span>Master Chef</span>
@@ -70,7 +70,7 @@
             </nav>
           </figure>  
           <figure>
-            <div><img src="files/chefs-2.jpg" alt="chefs-2"></div>
+            <div><img src="chefs-2.jpg" alt="chefs-2"></div>
             <figcaption>
               <h3>Sarah Jhonson</h3>
               <span>Patissier</span>
@@ -92,7 +92,7 @@
             </nav>
           </figure>  
           <figure>
-            <div><img src="files/chefs-3.jpg" alt="chefs-3"></div>
+            <div><img src="chefs-3.jpg" alt="chefs-3"></div>
             <figcaption>
               <h3>William Anderson</h3>
               <span>Cook</span>
@@ -122,49 +122,49 @@
         <p>Check <span>Our Gallery</span></p>
         <div>
           <figure>
-            <img src="files/meal-1.jpg" alt="meal 1">
+            <img src="meal-1.jpg" alt="meal 1">
             <figcaption>
               <h3>Pizza</h3>
               <p>Hawaiian pizza with ham and pineapple</p>
             </figcaption>  
           </figure>
           <figure>
-            <img src="files/meal-4.jpg" alt="meal 4">
+            <img src="meal-4.jpg" alt="meal 4">
             <figcaption>
               <h3>Levitation pizza</h3>
               <p>Levitation pizza on black background.</p>
             </figcaption>  
           </figure>
           <figure>
-            <img src="files/meal-2.jpg" alt="meal 2">
+            <img src="meal-2.jpg" alt="meal 2">
             <figcaption>
               <h3>Beef steaks</h3>
               <p>Tasty beef steaks flying above cast iron grate with fire flames.</p>
             </figcaption>  
           </figure>
           <figure>
-            <img src="files/meal-7.jpg" alt="meal 7">
+            <img src="meal-7.jpg" alt="meal 7">
             <figcaption>
               <h3>Frittata</h3>
               <p>Frittata or potato pie in a ceramic plate</p>
             </figcaption>  
           </figure>
           <figure>
-            <img src="files/meal-3.jpg" alt="meal 3">
+            <img src="meal-3.jpg" alt="meal 3">
             <figcaption>
               <h3>Burger</h3>
               <p>grass fed bison hamburger with chips & beer</p>
             </figcaption>  
           </figure>
           <figure>
-            <img src="files/meal-5.jpg" alt="meal 5">
+            <img src="meal-5.jpg" alt="meal 5">
             <figcaption>
               <h3>Crispy Fried Chicken</h3>
               <p>Golden brown chicken legs with a crunchy coating and juicy meat</p>
             </figcaption>  
           </figure>
           <figure>
-            <img src="files/meal-6.jpg" alt="meal 6">
+            <img src="meal-6.jpg" alt="meal 6">
             <figcaption>
               <h3>Lyulya kebab</h3>
               <p>Tender and juicy skewers of ground lamb or beef, flavored with aromatic spices and herbs</p>
@@ -220,7 +220,7 @@
     <footer>
       <div class="m">
         <div class="d0">
-          <div><img src="files/favicon.png" alt="favicon"><h2>Mealify</h2></div>
+          <div><img src="favicon.png" alt="favicon"><h2>Mealify</h2></div>
           <p>Mealify is a restaurant landing page that offers a delicious dining experience to its customers.</p>
           <h3>Social Media</h3>
           <nav class="s">
